# PraxisML

./: .env.example  .env.infra  .gitignore  FaseXAI.md  README.md  TODO: Planning Fases  audit_report.md  cleanup.py  combined_config.yaml  combined_config_medsam.yaml  combined_config_universeg.yaml  combined_pipeline.py  combined_pipeline_medsam.py  combined_pipeline_own_model.py  combined_pipeline_universeg.py  combined_pipeline_universeg_mean.py  combined_pipeline_universeg_unique_channel.py  compare_scaled_methods.py  compare_scaled_metrics_mri.py  docker-compose.yml  evaluate.py  evaluate_mc.py  execute_gpu_medsam.sh  execute_gpu_universeg.sh  execute_gpu_universeg_mean.sh  execute_gpu_universeg_unique.sh  execution_pipeline.sh  mc_dropout.py  mnist_model.pth  noise_inference.py  package-lock.json  prepare_carvana_dataset.py  requirements.txt  roadmap.md  scaled_mc_dropout_cross_entropy.py  scaled_mc_dropout_cross_entropy_bisection.py  scaled_mc_dropout_hamming.py  scaled_mc_dropout_hamming_bisection.py  scaled_mc_dropout_nll_relaxed.py  scaled_mc_dropout_nll_relaxed_bisection.py  (+6 more)
.dvc/: config  (+1 more)
backend/: .coverage  Dockerfile  alembic.ini  coverage.xml  generate_dummy_unet.py  migrate.py  pyproject.toml  test_integration.db  verify_model_loading.py
backend/app/: .env  database.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py  setup.py
backend/app/core_ml/: dataset_parser.py  explainability.py  factory.py  hyperparams.py  interfaces.py  preprocessing.py  tabular_parser.py
backend/app/models/: __init__.py  base.py  dataset.py  ml_model.py  prediction.py  tenant.py  user.py
backend/app/schemas/: dataset.py  ml_model.py  pagination.py  prediction.py  tenant.py
backend/app/services/: background_cache.py  data_profiler.py  dvc_service.py  inference_service.py  mlflow_service.py  model_cache.py  storage_local.py  storage_minio.py  storage_s3.py  storage_service.py  training_service.py  training_utils.py
backend/app/worker/: celery_app.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py  20260307_1258_add_dataset_missing_columns.py  20260308_0020_add_quota_and_rbac_columns.py  20260310_1200_add_model_registry_and_dvc.py  20260310_1236_add_dvc_fields_to_dataset.py  20260310_1257_add_dvc_fields_to_dataset.py  20260310_1301_add_dvc_columns.py  20260310_1528_add_is_active_to_dataset.py  20260310_1623_add_is_active.py  20260315_1630_add_dvc_fields_to_mlmodel.py  20260315_1631_add_metrics_metadata_to_dataset.py
backend/scripts/: validate_model.py
backend/tests/integration/: test_api_endpoints.py  test_model_lifecycle.py
backend/tests/unit/: test_config.py  test_core_ml.py  test_data_profiler.py  test_database.py  test_factory.py  test_inference_service.py  test_main_app.py  test_model_registry.py  test_preprocessing.py  test_preprocessing_save.py  test_rbac_quota.py  test_security.py  test_tabular_parser.py  test_training_service.py  test_uncertainty.py
(+93 files in other folders)
