[project]
name = "backend"
version = "0.1.0"
description = "PraxisML — Backend FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ── Web Framework ──────────────────────────────────────────────────
    "fastapi>=0.133.1",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.26",
    # ── Base de datos ──────────────────────────────────────────────────
    "sqlalchemy>=2.0.47",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    # ── Seguridad / Auth ───────────────────────────────────────────────
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt>=2.11.0",
    "jose>=1.0.0",
    # ── Validación y configuración ─────────────────────────────────────
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    # ── Rate Limiting ──────────────────────────────────────────────────
    "slowapi>=0.1.9",
    # ── Observabilidad ─────────────────────────────────────────────────
    "prometheus-fastapi-instrumentator>=7.0.0",
    # ── Almacenamiento S3-compatible (MinIO / AWS S3) ──────────────────
    "boto3>=1.34.0",
    # ── Cola de tareas ─────────────────────────────────────────────────
    "celery>=5.6.2",
    "redis>=7.2.1",
    # ── ML / Datos ─────────────────────────────────────────────────────
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    # ── Formatos de datos ──────────────────────────────────────────────
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    # ── MLFlow ────────────────────────────────────────────────────────
    "mlflow==3.10.0",
    "setuptools",
    "dvc[s3]",
    # --- XAI / Explicabilidad ---
    "shap>=0.44.0",
    # --- Data Drift ---
    "evidently>=0.4.0",
    "ruff>=0.15.5",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py310"
